simple class, just a test !

--- a/sayHello/.classpath
+++ b/sayHello/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="/opt/myWare/wareJars/spring/spring-data-jdbc-1.0.0.RC3/dist/spring-data-jdbc-core-1.0.0.RC3.jar"/>
+	<classpathentry kind="lib" path="/opt/myWare/wareJars/spring/spring-data-jdbc-1.0.0.RC3/dist/spring-data-oracle-1.0.0.RC3.jar"/>
+	<classpathentry kind="lib" path="/opt/myWare/wareJars/spring/spring-3.2.0.M1/libs"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
